<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".presentation.mainscreen.CoursesFragment">


    <EditText
        android:id="@+id/searchEditText"
        style="@style/Theme.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/search"
        android:inputType="text"
        android:paddingVertical="20dp"
        android:paddingStart="56dp"
        app:layout_constraintEnd_toStartOf="@+id/filterImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/filterImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/filter_background"
        android:clipToOutline="true"
        android:padding="20dp"
        android:src="@drawable/ic_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_search"
        app:layout_constraintStart_toStartOf="@+id/searchEditText"
        app:layout_constraintTop_toTopOf="@+id/searchEditText" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/sortingByDateAddedTextButton"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="0dp"
        android:paddingEnd="16dp"
        android:text="@string/by_date_added"
        android:textColor="@color/green"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/filterImageView"
        app:layout_constraintTop_toBottomOf="@+id/searchEditText"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <ImageView
        android:id="@+id/searchImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="@+id/sortingByDateAddedTextButton"
        app:layout_constraintTop_toTopOf="@+id/sortingByDateAddedTextButton"
        app:srcCompat="@drawable/ic_sorting" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/layout_margin_horizontal"
        android:contentDescription="@string/courses"
        android:paddingBottom="160dp"
        app:layout_constraintTop_toBottomOf="@+id/sortingByDateAddedTextButton" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:indeterminate="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchEditText" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:indeterminate="true"
        android:visibility="visible"
        android:text="Ошибка"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>